--- a/public/styles/client-layout.css
+++ b/public/styles/client-layout.css
@@ -1,6 +1,10 @@
 .bg-fpt-orange{
-    background: #F37021;
+    background: #FFF;
+    opacity:0.7;
 }
 .navbar-nav a, .navbar-brand {
-    color: #fff!important;
+    color: #000 !important;
+    font-size: 1rem !important;
+    font-weight: 400;
+    letter-spacing:0.2px;
 }
