--- a/public/styles/client-layout.css
+++ b/public/styles/client-layout.css
@@ -1,6 +1,6 @@
 .bg-fpt-orange{
     background: #FFF;
-    opacity:0.7;
+    /*opacity:0.7;*/
 }
 .navbar-nav a, .navbar-brand {
     color: #000 !important;
